# Face_Detection

./: Podfile
Face_Detection/: SceneDelegate.swift  ViewController.swift
Face_Detection.xcodeproj/: project.pbxproj
Face_Detection.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
Face_Detection.xcodeproj/xcuserdata/javlonbek.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Face_Detection.xcodeproj/xcuserdata/javlonbek.xcuserdatad/xcschemes/: xcschememanagement.plist
Face_Detection.xcworkspace/: contents.xcworkspacedata
Face_Detection.xcworkspace/xcuserdata/java.xcuserdatad/: UserInterfaceState.xcuserstate
Face_Detection.xcworkspace/xcuserdata/javlonbek.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Face_Detection.xcworkspace/xcuserdata/javlonbek.xcuserdatad/xcschemes/: xcschememanagement.plist
Face_Detection.xcworkspace/xcuserdata/javlonbekdev.xcuserdatad/: UserInterfaceState.xcuserstate
Face_Detection.xcworkspace/xcuserdata/javlonbekdev.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Face_Detection/app/models/: Vector.swift
Face_Detection/app/screens/: LiveVC.swift  NameAddVC.swift  PhotoVC.swift  VC.swift  ViewController.swift
Face_Detection/custom/: TextField.swift
Face_Detection/extensions/: Ext.swift  TFLiteFaceRecognition.swift  VectorHelper.swift
Face_Detection/extensions/cpp/: ANNDatabase.cpp  ANNDatabase.h  CMakeLists.txt  HashFunction.cpp  HashFunction.h  LSHTable.cpp  LSHTable.h  VectorOperations.cpp  VectorOperations.h
Face_Detection/utils/: AppDelegate.swift
(+1 files in other folders)
